--- a/mean-project/src/app/posts/post-create/post-create.component.html
+++ b/mean-project/src/app/posts/post-create/post-create.component.html
@@ -1,12 +1,19 @@
 <mat-card>
+  <form (submit)="onAddPost(postForm)" #postForm="ngForm">
   <mat-form-field>
-    <textarea matInput rows="6" [(ngModel)]="enteredValue"></textarea>
+    <input matInput type = "text" name = "title" ngModel required minlength="3" #title="ngModel">
+    <mat-error *ngIf="title.invalid">Minimum length of post title is 3</mat-error>
   </mat-form-field>
+  <mat-form-field>
+    <textarea matInput rows="4" name = "content" ngModel required #content="ngModel"></textarea>
+    <mat-error *ngIf="content.invalid">Please enter content</mat-error>
+  </mat-form-field>
+  <button
+  mat-raised-button
+  color="accent"
+  type="submit">Save Post</button>
+</form>
 </mat-card>
 
 <hr>
-<button
-  mat-raised-button
-  color="accent"
-  (click)="onAddPost()">Save Post</button>
-<p>{{ newPost }}</p>
+
